--- a/estilo.css
+++ b/estilo.css
@@ -18,3 +18,76 @@ input#calc {
     height: 40px;
     font-style: italic;
 }
+
+
+/*divisão da página*/
+
+.corpo {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 70%;
+}
+
+.calculadora {
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row: 1;
+    background-color: blue;
+}
+
+.lateral {
+    grid-column-start: 2;
+    grid-row: 1;
+    background-color: blueviolet;
+}
+
+.cabecalho {
+    background-color: aqua;
+}
+
+.rodape {
+    background-color: bisque;
+}
+
+
+/*calculadora simples*/
+
+form fieldset {
+    margin: 10px auto 10px auto;
+    width: 40%;
+    border: solid black 1px;
+    padding: 3%;
+}
+
+form legend {
+    padding: 6px;
+    margin: 10px;
+    border: solid black 1px;
+    font-size: 90%;
+    font-weight: bold;
+    background-color: #e8e8e8;
+}
+
+form label {
+    display: block;
+    font-size: 14px;
+}
+
+form input {
+    width: 100%;
+    border: solid #ccc 1px;
+    font-size: 14px;
+    margin-bottom: 10px;
+}
+
+form input.botao {
+    display: block;
+    width: auto;
+    float: right;
+}
+
+
+/*
+fieldset {
+    width: 100%;
+}*/
