--- a/estilo.css
+++ b/estilo.css
@@ -87,7 +87,42 @@ form input.botao {
 }
 
 
-/*
-fieldset {
+/*Calculadora completa*/
+
+#visor {
+    background-color: #bdffb4;
+    text-align: right;
+    font-size: large;
+}
+
+table {
+    margin: 0 auto 0 auto;
+}
+
+form fieldset {
+    margin: 10px auto 10px auto;
+    width: 40%;
+    border: solid black 1px;
+    padding: 3%;
+    margin-bottom: 10px;
+}
+
+form input {
     width: 100%;
-}*/
+    border: solid #ccc 1px;
+    font-size: 11px;
+    margin-bottom: 10px;
+}
+
+form input.num {
+    display: block;
+    width: 40px;
+    height: 40px;
+}
+
+form input.oper {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-color: #b2b2b2;
+}
